--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -36,4 +36,4 @@ jobs:
           automatic_release_tag: latest
           prerelease: true
           files: |
-            build/libs/*.jar
+            target/*.jar
